--- a/style.css
+++ b/style.css
@@ -4,7 +4,21 @@ body {
     background: white;
 }
 
-.calculator-section {
+.judul {
+    text-align: center;
+    margin-top: 40px;
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%)
+}
+.judul h1 {
+    margin: 0;
+    font-weight: bold;
+    font-size: 50px;
+    margin-bottom: -10px;
+}
+
+.kalkulator-section {
     min-height: 100vh;
     display: flex;
     justify-content: center;
@@ -12,7 +26,7 @@ body {
     background: white;
 }
 
-.Kalkulator {
+.kalkulator {
     background: rgba(255, 255, 255, 0.15);
     border-radius: 20px;
     max-width: 400px;
@@ -137,3 +151,15 @@ button:hover {
   opacity: 1;
   transform: translateY(0);
 }
+
+@media (max-width: 768px) {
+    .kalkulator {
+        margin-top: 70px;
+    }
+    
+    .judul h1 {
+        font-size: 40px;
+        font-weight: bold;
+    }
+}
+    
